Fixed squished face

--- a/ProBio.css
+++ b/ProBio.css
@@ -65,6 +65,7 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 100%;
+  object-fit: cover;
 }
 
 .output {
